--- a/views/pages/passenger_lists.ejs
+++ b/views/pages/passenger_lists.ejs
@@ -66,6 +66,6 @@
   </main>
   <%- include("../partials/footer") %>
   <script type="module" src="/js/check-status.mjs"></script>
-  <script type="module" src="/js/publication.mjs"></script>
+  <script type="module" src="/js/lists.mjs"></script>
 </body>
 </html>
