--- a/views/css/publication.css
+++ b/views/css/publication.css
@@ -4,9 +4,9 @@
   margin-bottom: .5em;
 }
 
-#mirador-viewer {
-  position: relative;
-  height: 75vh;
+#pic-viewer > img {
+  position: center;
+  height: 100%;
   width: 100%;
   left: 0;
 }
@@ -18,6 +18,6 @@ details > summary {
   margin-bottom: 1em;
 }
 
-details > dl {
+dl {
   margin-left: 1em;
 }
