--- a/views/pages/list.ejs
+++ b/views/pages/list.ejs
@@ -19,6 +19,7 @@
           <div class="row">
             <dt class="col-sm-3">Travel date</dt>
             <dd class="col-sm-9" id="date"></dd>
+          </div>
           <div class="row">
             <dt class="col-sm-3">Ship name</dt>
             <dd class="col-sm-9" id="name"></dd>
