add report page

--- a/views/pages/report-issue.ejs
+++ b/views/pages/report-issue.ejs
@@ -20,19 +20,20 @@
         <input type="text" class="form-control col-sm-10" id="reporter-email" name="reporter-email">
       </div>
       <div class="row">
-        <label for="publication-id" class="col-sm-2">Publication's Travelogues ID</label>
+        <label for="publication-id" class="col-sm-2">Ship ID</label>
         <input type="number" class="form-control col-sm-10" id="publication-id" name="publication-id">
       </div>
       <div class="row">
-        <label for="publication-title" class="col-sm-2">Publication title</label>
+        <label for="publication-title" class="col-sm-2">Ship Date</label>
         <input type="text" class="form-control col-sm-10" id="publication-title" name="publication-title">
       </div>
       <div class="row">
         <label for="issue-description" class="col-sm-2">Issue description</label>
         <textarea class="form-control col-sm-10" id="issue-description" name="issue-description"></textarea>
       </div>
-      <input id="search-btn" type="submit" value="Submit">
     </form>
+    <button id="search-btn">Submit</button>
+    <p id="error"></p>
   </main>
   <script type="module" src="/js/report-issue.mjs"></script>
   <%- include("../partials/footer") %>
